# tohoku-tech-dojo-hp-admin

./: .env  .eslintrc.cjs  .firebaserc  .gitignore  .prettierignore  .prettierrc.cjs  README.md  angular.json  firebase.json  karma.conf.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.worker.json  webpack.config.js
graphql/: codegen.yml
src/: apollo.ts  index.html  polyfills.ts  styles.scss
src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  root-view.service.ts
src/app/firebase/: admins.d.ts  blogs.d.ts  index.ts
src/app/guards/: auth.guard.ts
src/app/pages/blog/: blog-page.service.ts
src/app/pages/blog/editor/: editor.component.html  editor.component.scss  editor.component.spec.ts  (+1 more)
src/app/pages/home/: home.component.spec.ts  home.component.ts
src/app/pages/news/: blog-page.ts
src/app/pages/sign-in/: sign-in.component.html  sign-in.component.scss  sign-in.component.spec.ts  sign-in.component.ts
src/app/services/: auth.service.ts  authentication.service.ts  meta.service.ts  navigate-sign-in.service.ts  route-changes.service.ts  youngest-route.service.ts
src/app/utils/: has-fetched-user.ts
src/environments/: environment.example.ts
src/graphql/: schema.d.ts
src/theme/: _index.scss  _styling.scss  _theming.scss  _typography.scss
src/wasm/md2html-converter/markdown-wasm/: README.md
src/wasm/md2html-converter/pulldown-cmark/: Cargo.toml
src/wasm/md2html-converter/pulldown-cmark/src/: lib.rs
src/wasm/pulldown-cmark/src/: lib.rs
(+24 files in other folders)
