[package]
name = "pulldown-cmark"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Convert to markdown text to HTML"
repository = "https://github.com/junpei-8/tohoku-tech-dojo-hp-admin"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83" # @see https://github.com/rustwasm/wasm-bindgen
pulldown-cmark = { version = "0.9.2", default-features = false }
